spade-tests/src/snapshots/spade_tests__affine_check__double_consumption_of_identifier_in_pipeline_produces_error.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Subexpression used multiple times
  ┌─ testinput:2:16
  │
2 │     (resource, resource)
  │      --------  ^^^^^^^^ Use of consumed resource
  │      │          
  │      Previously used here
  │
  = Because the expression  is of type &mut


