spade-tests/src/snapshots/spade_tests__affine_check__more_than_one_field_consumption_causes_error.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Subexpression used multiple times
  ┌─ testinput:5:11
  │
5 │     (a.x, a.x)
  │      ---  ^^^ Use of consumed resource
  │      │     
  │      Previously used here
  │
  = Because the expression  is of type &mut


